Fix iOS layout issues

--- a/ui/seznam.cz-2021/app.css
+++ b/ui/seznam.cz-2021/app.css
@@ -20,5 +20,5 @@
 }
 
 :local(.main) {
-  flex: 1 1 auto;
+  flex: 1 1 100%;
 }
